src/test/ui/asm/type-check-never.stderr
error[E0282]: type annotations needed
  --> $DIR/type-check-never.rs:13:28
   |
LL |         asm!("{}", in(reg) u);
   |                            ^ cannot infer type
   |
   = note: type must be known at this point

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
